Added rough overview. Will add more details later

--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@ body {
 <body>
 
 <h1>Daily Fantasy Sports Optimizer:</h1>
-<p>Helping daily fantasy sports users create optimized lineups.</p>
+<p>
+	A project by: Charity Brown, Andy Johnson, Elizabeth Payne, and Gage
+	Wassweiler
+</p>
+
+<h2>Project Overview:</h2>
+<p>
+	     This project is intended to assist daily fantasy sports users create an
+	optimized lineup for competitions. Making lineups on apps such as FanDuel and
+	DraftKings is very difficult because the only statistic shown to  users is the
+	players' average points per game. The user is left to create a lineup on their
+	own.
+	     With our app, users can automatically generate an optimal lineup based on
+	detailed player statistics, player salary, and the salary cap.
+</p>
 
 
 
