--- a/bioPage.html
+++ b/bioPage.html
@@ -76,19 +76,19 @@ animation-duration: 1.5s; }
 <div class="slideshow-container">
 <div class="mySlides fade">
 <div class="numbertext">1 / 4</div>
-<img src="image.png" style="width:100%"> <div class="text">Charity Brown</div>
+<img src="Charity.png" style="width:100%"> <div class="text">Charity Brown</div>
 </div>
 <div class="mySlides fade">
 <div class="numbertext">2 / 4</div>
-<img src="image2.png" style="width:100%"> <div class="text">Andy Johnson</div>
+<img src="Andy.png" style="width:100%"> <div class="text">Andy Johnson</div>
 </div>
 <div class="mySlides fade">
 <div class="numbertext">3 / 4</div>
-<img src="image3.png" style="width:100%"> <div class="text">Elizabeth Payne</div>
+<img src="Elizabeth.png" style="width:100%"> <div class="text">Elizabeth Payne</div>
 </div>
  <div class="mySlides fade">
 <div class="numbertext">4 / 4</div>
-<img src="image4.png" style="width:100%"> <div class="text">Gage Wassweiler</div>
+<img src="Gage.png" style="width:100%"> <div class="text">Gage Wassweiler</div>
 </div>
 </div> <br>
 <div style="text-align:center"> <span class="dot"></span> <span class="dot"></span> <span class="dot"></span><span class="dot"></span>
