Messed around with subpages, links, and menus in html. Ignore ugly styling for now

--- a/bioPage.html
+++ b/bioPage.html
@@ -131,6 +131,17 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
   
 <h2>Gage Wassweiler</h2>
 <p> Insert Description</p>
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+<a href="index.html">
+    <div class="div1">
+      Back to Home!
+    </div>
+</a>
+  
+
+
   
     
   <body>
