--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="style.css">
 <title>Daily Fantasy Sports Optimizer</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,6 +19,15 @@ body {
 	Wassweiler
 </p>
 
+<nav>
+	<ul>
+		<li><a href="bioPage.html">Bio</a></li>
+		<li><a href="#">Menu Option 2</a></li>
+		<li><a href="#">Menu Option 3</a></li>
+	</ul>
+</nav>
+
+
 <h2>Project Overview:</h2>
 <p>
 	     This project is intended to assist daily fantasy sports users create an
@@ -28,6 +38,7 @@ body {
 	     With our app, users can automatically generate an optimal lineup based on
 	detailed player statistics, player salary, and the salary cap.
 </p>
+
 
 
 
