--- a/index.html
+++ b/index.html
@@ -34,10 +34,34 @@ body {
 	optimized lineup for competitions. Making lineups on apps such as FanDuel and
 	DraftKings is very difficult because the only statistic shown to  users is the
 	players' average points per game. The user is left to create a lineup on their
-	own.
-	     With our app, users can automatically generate an optimal lineup based on
+	own.</p>
+
+	   <p>  With our app, users can automatically generate an optimal lineup based on
 	detailed player statistics, player salary, and the salary cap.
 </p>
+
+<h2>Technical Features:</h2>
+<blockquote>
+<h3>Database</h3>
+<p>We will need a database that can store all the plaer and game stats for each sport.
+	 This will be where we gather all of our data to train and run our model.
+	 The database will have to auto-update daily in order to input any new stats. We
+	 will be using a SQL server for this.</p>
+
+<h3>APIs and Plugins</h3>
+<p>We will be usi=ing an API to interact with the NBA, NFL, and MLB stats. Eqach API will give us acces to all recorded stats for each respected sport and
+	this will help us in creating our database.
+
+	We will also be using a plugin to help with the modeling process as well as the optomization. </p>
+
+<h3>Modeling Process</h3>
+	<p> We will be running a linear regression in order to predict the fantasy points for each player.
+		We can track our accuracy by looking at the P-value. We want to get as close to 1 as possible although
+		it would be phenomenal if we can achieve a P-value of 0.6. Our initial goal will be to get above 0.45.
+		We can also check how coherent and useful our data is using the Adjusted R squared value.</p>
+
+</blockquote>
+
 
 
 
