--- a/index.html
+++ b/index.html
@@ -21,50 +21,40 @@ body {
 
 <nav>
 	<ul>
-		<li><a href="bioPage.html">Bio</a></li>
-		<li><a href="#">Menu Option 2</a></li>
-		<li><a href="#">Menu Option 3</a></li>
+		<li><a href="technicalOverview.html">Technical Overview</a></li>
+		<li><a href="deliverablesPage.html">Deliverables</a></li>
+		<li><a href="bioPage.html">About Us</a></li>
 	</ul>
 </nav>
 
 
 <h2>Project Overview:</h2>
-<p>
-	     This project is intended to assist daily fantasy sports users create an
+	<p>   This project is intended to assist daily fantasy sports users create an
 	optimized lineup for competitions. Making lineups on apps such as FanDuel and
-	DraftKings is very difficult because the only statistic shown to  users is the
-	players' average points per game. The user is left to create a lineup on their
-	own.</p>
+	DraftKings is very difficult because the user is left to create a lineup on their
+	own using very limited statistics.</p>
 
-	   <p>  With our app, users can automatically generate an optimal lineup based on
-	detailed player statistics, player salary, and the salary cap.
-</p>
+	<p>    With our app, users can automatically generate an optimal lineup based on
+	detailed player statistics, player salary, and the salary cap. The user would
+	also be able to edit that lineup to suit their preferences. </p>
 
-<h2>Technical Features:</h2>
+<h2>Project Goals:</h2>
 <blockquote>
-<h3>Database</h3>
-<p>We will need a database that can store all the plaer and game stats for each sport.
-	 This will be where we gather all of our data to train and run our model.
-	 The database will have to auto-update daily in order to input any new stats. We
-	 will be using a SQL server for this.</p>
+<h3>Optimized Lineup</h3>
+<p>We want to generate an optimized lineup for each user that they can then use on
+daily fantasy sports sites. In order to make these lineups, we will use
+statistics including: player average points per game, player average performace
+against opponent, injury status, strength of the opponent, etc. See our
+"Technical Overview" for more information on our statistics </p>
 
-<h3>APIs and Plugins</h3>
-<p>We will be usi=ing an API to interact with the NBA, NFL, and MLB stats. Eqach API will give us acces to all recorded stats for each respected sport and
-	this will help us in creating our database.
+<h3>User-Friendliness and Ease of Use</h3>
+<p>Our goal is to create an application that is easy to use and also appealing
+in order to keep users happy. </p>
 
-	We will also be using a plugin to help with the modeling process as well as the optomization. </p>
-
-<h3>Modeling Process</h3>
-	<p> We will be running a linear regression in order to predict the fantasy points for each player.
-		We can track our accuracy by looking at the P-value. We want to get as close to 1 as possible although
-		it would be phenomenal if we can achieve a P-value of 0.6. Our initial goal will be to get above 0.45.
-		We can also check how coherent and useful our data is using the Adjusted R squared value.</p>
-
+<h3>Daily Fantasy Sports Offered</h3>
+<p> We have an initial goal of offering optimized lineups for NBA daily fantasy
+sports. After completing this goal to a reasonable degree, we hope to then expand
+to other sports such as NFL and MLB.</p> 
 </blockquote>
-
-
-
-
-
 </body>
 </html>
