--- a/bioPage.html
+++ b/bioPage.html
@@ -61,6 +61,56 @@ animation-duration: 1.5s; }
 }
 /* On smaller screens, decrease text size */ @media only screen and (max-width: 300px) {
 .text {font-size: 11px} }
+ 
+ /*Contact Form */
+ .contact-title
+{
+ margin-top:100px;
+ color: #fff;
+ text-transform: uppercase;
+ transition: all 4s ease-in-out;
+ }
+ .contact-title h1
+{
+ front-size: 32px;
+ line-height: 10px;
+ }
+ .contact-title h2
+{
+ font-size: 16px;
+ }
+ form
+ {
+  margin-top: 50px;
+  transition: all 4s ease-in-out
+ }
+ .form-control
+ {
+  width: 600px;
+  background: transparent;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid gray;
+  color: #fff;
+  font-size: 18px;
+  margin-bottom: 16px;
+ }
+ input
+ {
+  height: 45px
+ }
+ form .submit
+ {
+  background: #ff5722;
+  border-color: transparent;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  height: 50px;
+  margin-top: 20px;
+ }
+ 
 </style>
   </head>
 
@@ -127,7 +177,21 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
 <p> Insert Description</p>
   
   
-  
+ 
+ <!--Contact Form-->
+ <div class= "contact-form">
+ <form id="contact-form" method="post" action="">
+  <input name="name" type="text" class="form-control" placeholder="Your Name" required>
+  <br>
+  <input name="email" type="email" class="form-control" placeholder= "Your Email" required>
+  <br>
+     <textarea name="message" class="form-control" placeholder="Message" row="4" required></textarea>
+  <br>
+     <input type="submit" class="form-control submit" value="SEND MESSAGE">
+  </form>
+  </div>
+ 
+ 
   
 <h2>Gage Wassweiler</h2>
 <p> Insert Description</p>
