--- a/bioPage.html
+++ b/bioPage.html
@@ -196,7 +196,7 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
  
  <!--Contact Form-->
  <div class= "contact-form">
- <form id="contact-form" method="post" action="">
+ <form id="contact-form" method="post" action="contact_form_handler.php">
   <input name="name" type="text" class="form-control" placeholder="Your Name" required>
   <br>
   <input name="email" type="email" class="form-control" placeholder= "Your Email" required>
