--- a/bioPage.html
+++ b/bioPage.html
@@ -195,8 +195,11 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
   
  
  <!--Contact Form-->
- <div class= "contact-form">
+ <head>
   <title> Contact Us! </title>
+ </head>
+<body>
+ <div class= "contact-form">
  <form id="contact-form" method="post" action="contact_form_handler.php">
   <input name="name" type="text" class="form-control" placeholder="Your Name" required>
   <br>
@@ -207,7 +210,9 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
      <input type="submit" class="form-control submit" value="SEND MESSAGE">
   </form>
   </div>
- 
+</body>
+
+ <!--End of Contact Form-->
     
   <body>
     <footer>
