--- a/bioPage.html
+++ b/bioPage.html
@@ -195,11 +195,9 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
   
  
  <!--Contact Form-->
- <head>
-  <title> Contact Us! </title>
- </head>
-<body>
+
  <div class= "contact-form">
+  <h1>Contact Us!</h1>
  <form id="contact-form" method="post" action="contact_form_handler.php">
   <input name="name" type="text" class="form-control" placeholder="Your Name" required>
   <br>
@@ -210,7 +208,7 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
      <input type="submit" class="form-control submit" value="SEND MESSAGE">
   </form>
   </div>
-</body>
+
 
  <!--End of Contact Form-->
     
