--- a/bioPage.html
+++ b/bioPage.html
@@ -197,6 +197,7 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
  <!--Contact Form-->
 
  <div class= "contact-form">
+  <h2>Contact Us!</h2>
  <form id="contact-form" method="post" action="contact_form_handler.php">
   <input name="name" type="text" class="form-control" placeholder="Your Name" required>
   <br>
