--- a/bioPage.html
+++ b/bioPage.html
@@ -62,7 +62,9 @@ animation-duration: 1.5s; }
 /* On smaller screens, decrease text size */ @media only screen and (max-width: 300px) {
 .text {font-size: 11px} }
  
- /*Contact Form */
+ /*Contact 
+ 
+ */
  .contact-title
 {
  margin-top:100px;
@@ -81,6 +83,7 @@ animation-duration: 1.5s; }
  }
  form
  {
+  text-align: center;
   margin-top: 50px;
   transition: all 4s ease-in-out
  }
