--- a/bioPage.html
+++ b/bioPage.html
@@ -83,7 +83,7 @@ animation-duration: 1.5s; }
  }
  form
  {
-  text-align: center;
+  margin: 0 auto;
   margin-top: 50px;
   transition: all 4s ease-in-out
  }
