--- a/bioPage.html
+++ b/bioPage.html
@@ -118,7 +118,7 @@ animation-duration: 1.5s; }
  background-color: #f44336;
  cursor: pointer;
  }
- h2 {text-align: center;}
+ h2 {margin: 0 auto;}
 </style>
   </head>
 
