--- a/bioPage.html
+++ b/bioPage.html
@@ -40,8 +40,7 @@ color: #f2f2f2; font-size: 12px; padding: 8px 12px; position: absolute; top: 0;
 /* The dots/bullets/indicators */ .dot {
 height: 15px;
 width: 15px;
-margin-right: 150px;
-/* margin: 0 2px; */
+ margin: 0 2px; 
 background-color: #bbb;
 border-radius: 50%;
 display: inline-block;
