--- a/bioPage.html
+++ b/bioPage.html
@@ -134,7 +134,7 @@ animation-duration: 1.5s; }
 <div class="slideshow-container">
 <div class="mySlides fade">
 <div class="numbertext">1 / 4</div>
-<img src="Charity.jpg" width="400" height="400"> <div class="text">Charity Brown</div>
+<img src="bioPhotos/Charity.jpg" width="400" height="400"> <div class="text">Charity Brown</div>
 </div>
 <div class="mySlides fade">
 <div class="numbertext">2 / 4</div>
