--- a/bioPage.html
+++ b/bioPage.html
@@ -138,15 +138,15 @@ animation-duration: 1.5s; }
 </div>
 <div class="mySlides fade">
 <div class="numbertext">2 / 4</div>
-<img src="Andy.png" width="400" height="400"> <div class="text">Andy Johnson</div>
+<img src="bioPhotos/Andy.png" width="400" height="400"> <div class="text">Andy Johnson</div>
 </div>
 <div class="mySlides fade">
 <div class="numbertext">3 / 4</div>
-<img src="Elizabeth.png" width="400" height="400"> <div class="text">Elizabeth Payne</div>
+<img src="bioPhotos/Elizabeth.png" width="400" height="400"> <div class="text">Elizabeth Payne</div>
 </div>
  <div class="mySlides fade">
 <div class="numbertext">4 / 4</div>
-<img src="Gage.png" width="400" height="400"> <div class="text">Gage Wassweiler</div>
+<img src="bioPhotos/Gage.png" width="400" height="400"> <div class="text">Gage Wassweiler <p>THIS IS A DESCRIPTION TEST TO SEE WHERE IT IS PLACED.</p></div>
 </div>
 </div> <br>
 <div style="text-align:center"> <span class="dot"></span> <span class="dot"></span> <span class="dot"></span><span class="dot"></span>
