--- a/bioPage.html
+++ b/bioPage.html
@@ -33,7 +33,7 @@ max-width: 1000px; position: relative; margin: auto;
 /* Caption text */ .text {
 color: #f2f2f2; font-size: 15px; padding: 8px 12px; position: absolute; bottom: 8px;
 width: 100%;
-text-align: center; }
+text-align: right; }
 /* Number text (1/3 etc) */ .numbertext {
 color: #f2f2f2; font-size: 12px; padding: 8px 12px; position: absolute; top: 0;
 }
