--- a/bioPage.html
+++ b/bioPage.html
@@ -31,7 +31,7 @@ img {vertical-align: middle;}
 max-width: 1000px; position: relative; margin: auto;
 }
 /* Caption text */ .text {
-color: #f2f2f2; font-size: 15px; padding: 8px 12px; position: absolute; bottom: 8px;
+color: #0a0a0a; font-size: 15px; padding: 8px 12px; position: absolute; bottom: 8px;
 width: 100%;
 text-align: right; }
 /* Number text (1/3 etc) */ .numbertext {
@@ -134,7 +134,7 @@ animation-duration: 1.5s; }
 <div class="slideshow-container">
 <div class="mySlides fade">
 <div class="numbertext">1 / 4</div>
-<img src="bioPhotos/Charity.jpg" width="400" height="460"> <div class="text">Charity Brown</div>
+<img src="bioPhotos/Charity.jpg" width="400" height="460"> <div class="text">Charity Brown <p> Charity Brown is currently a senior at the University of Alabama majoring in Computer Science with a minor in Criminal Justice.</div>
 </div>
 <div class="mySlides fade">
 <div class="numbertext">2 / 4</div>
