--- a/bioPage.html
+++ b/bioPage.html
@@ -134,8 +134,10 @@ animation-duration: 1.5s; }
 <div class="slideshow-container">
 <div class="mySlides fade">
 <div class="numbertext">1 / 4</div>
+ <div class= "column">
 <img src="bioPhotos/Charity.jpg" width="400" height="460"> <div class="text">Charity Brown                       <p> Charity Brown is currently a senior at the University of Alabama majoring in Computer Science with a minor in Criminal Justice. Charity's main areas of expertise entail using her software and cyber technical background in Computer Science to produce innovative, optimal, and immediate solutions with little or no rework involved.</p></div>
-</div>
+</div> 
+ </div>
 <div class="mySlides fade">
 <div class="numbertext">2 / 4</div>
 <img src="bioPhotos/Andy.png" width="400" height="460"> <div class="text">Andy Johnson</div>
