--- a/bioPage.html
+++ b/bioPage.html
@@ -126,7 +126,7 @@ animation-duration: 1.5s; }
   
   
 <h2>About Us</h2>
-<p> This application was developed by a team from the University of Alabama system computer science department to implement a use your friendly interface that is compatible with a highly functional back and SQL database.</p>
+<p> This application was developed by a team from the University of Alabama <br/> system computer science department to implement a use your friendly interface that <br/> is compatible with a highly functional back and SQL database.</p>
   
   
   
