--- a/bioPage.html
+++ b/bioPage.html
@@ -134,9 +134,9 @@ animation-duration: 1.5s; }
 <div class="slideshow-container">
 <div class="mySlides fade">
 <div class="numbertext">1 / 4</div>
- <div class= "column">
-<img src="bioPhotos/Charity.jpg" width="400" height="460"> <div class="text">Charity Brown                       <p> Charity Brown is currently a senior at the University of Alabama majoring in Computer Science with a minor in Criminal Justice. Charity's main areas of expertise entail using her software and cyber technical background in Computer Science to produce innovative, optimal, and immediate solutions with little or no rework involved.</p></div>
-</div> 
+
+<img src="bioPhotos/Charity.jpg" style="width:100%"> <div class="text">Charity Brown</div>
+
  </div>
 <div class="mySlides fade">
 <div class="numbertext">2 / 4</div>
@@ -174,7 +174,8 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
   
     
 <h2>Charity Brown</h2>
-<p> Insert Description</p>
+<p> Charity Brown is currently a senior at the University of Alabama majoring in Computer Science with a minor in Criminal Justice. Charity's main areas of expertise entail using her software and cyber technical background in Computer Science to produce innovative, optimal, and immediate solutions with little or no rework involved.
+ </p>
   
   
 <h2>Andy Johnson</h2>
