--- a/bioPage.html
+++ b/bioPage.html
@@ -135,7 +135,7 @@ animation-duration: 1.5s; }
 <div class="mySlides fade">
 <div class="numbertext">1 / 4</div>
 
-<img src="bioPhotos/Charity.jpg" style="width:100%"> <div class="text">Charity Brown</div>
+<img src="bioPhotos/Charity.jpg" width="800" height"460"> <div class="text">Charity Brown</div>
 
  </div>
 <div class="mySlides fade">
