--- a/bioPage.html
+++ b/bioPage.html
@@ -28,7 +28,7 @@
 body {font-family: Verdana, sans-serif;} .mySlides {display: none;}
 img {vertical-align: middle;}
 /* Slideshow container */ .slideshow-container {
-max-width: 1000px; position: relative; margin: auto;
+max-width: 1000px; position: relative; margin: 0 2px;
 }
 /* Caption text */ .text {
 color: #0a0a0a; font-size: 15px; padding: 8px 12px; position: absolute; bottom: 8px;
