--- a/bioPage.html
+++ b/bioPage.html
@@ -28,7 +28,7 @@
 body {font-family: Verdana, sans-serif;} .mySlides {display: none;}
 img {vertical-align: middle;}
 /* Slideshow container */ .slideshow-container {
-max-width: 1000px; position: relative; margin: 0 2px;
+max-width: 500px; position: relative; margin: auto;
 }
 /* Caption text */ .text {
 color: #0a0a0a; font-size: 15px; padding: 8px 12px; position: absolute; bottom: 8px;
@@ -135,7 +135,7 @@ animation-duration: 1.5s; }
 <div class="mySlides fade">
 <div class="numbertext">1 / 4</div>
 
-<img src="bioPhotos/Charity.jpg" width="500" height"460"> <div class="text">Charity Brown</div>
+<img src="bioPhotos/Charity.jpg" width=100%> <div class="text">Charity Brown</div>
 
  </div>
 <div class="mySlides fade">
