--- a/bioPage.html
+++ b/bioPage.html
@@ -140,15 +140,15 @@ animation-duration: 1.5s; }
  </div>
 <div class="mySlides fade">
 <div class="numbertext">2 / 4</div>
-<img src="bioPhotos/Andy.png" width=100%> <div class="text">Andy Johnson</div>
+<img src="bioPhotos/Andy.png" width="400" height="460"> <div class="text">Andy Johnson</div>
 </div>
 <div class="mySlides fade">
 <div class="numbertext">3 / 4</div>
-<img src="bioPhotos/Elizabeth.jpeg" width=100%> <div class="text">Elizabeth Payne</div>
+<img src="bioPhotos/Elizabeth.jpeg" width="400" height="460"> <div class="text">Elizabeth Payne</div>
 </div>
  <div class="mySlides fade">
 <div class="numbertext">4 / 4</div>
-<img src="bioPhotos/Gage.png" width=100%> <div class="text">Gage Wassweiler</div>
+<img src="bioPhotos/Gage.png" width="400" height="460"> <div class="text">Gage Wassweiler</div>
 </div>
 </div> <br>
 <div style="text-align:center"> <span class="dot"></span> <span class="dot"></span> <span class="dot"></span><span class="dot"></span>
