--- a/bioPage.html
+++ b/bioPage.html
@@ -33,7 +33,7 @@ max-width: 500px; position: relative; margin: auto;
 /* Caption text */ .text {
 color: #0a0a0a; font-size: 15px; padding: 8px 12px; position: absolute; bottom: 8px;
 width: 100%;
-text-align: right; }
+text-align: center; }
 /* Number text (1/3 etc) */ .numbertext {
 color: #f2f2f2; font-size: 12px; padding: 8px 12px; position: absolute; top: 0;
 }
@@ -193,6 +193,7 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
 <head>
   <link rel="stylesheet" href="style.css">
 </head>
+ 
  <!--Contact Form-->
 
  <div class= "contact-form">
