--- a/bioPage.html
+++ b/bioPage.html
@@ -83,7 +83,7 @@ animation-duration: 1.5s; }
  }
  form
  {
-  margin: 0 auto;
+  margin: center;
   margin-top: 50px;
   transition: all 4s ease-in-out
  }
@@ -135,20 +135,20 @@ animation-duration: 1.5s; }
 <div class="mySlides fade">
 <div class="numbertext">1 / 4</div>
 
-<img src="bioPhotos/Charity.jpg" width="400" height="460"> <div class="text">Charity Brown</div>
+<img src="bioPhotos/Charity.jpg" width="460" height="460"> <div class="text">Charity Brown</div>
 
  </div>
 <div class="mySlides fade">
 <div class="numbertext">2 / 4</div>
-<img src="bioPhotos/Andy.png" width="400" height="460"> <div class="text">Andy Johnson</div>
+<img src="bioPhotos/Andy.png" width="460" height="460"> <div class="text">Andy Johnson</div>
 </div>
 <div class="mySlides fade">
 <div class="numbertext">3 / 4</div>
-<img src="bioPhotos/Elizabeth.jpeg" width="400" height="460"> <div class="text">Elizabeth Payne</div>
+<img src="bioPhotos/Elizabeth.jpeg" width="460" height="460"> <div class="text">Elizabeth Payne</div>
 </div>
  <div class="mySlides fade">
 <div class="numbertext">4 / 4</div>
-<img src="bioPhotos/Gage.png" width="400" height="460"> <div class="text">Gage Wassweiler</div>
+<img src="bioPhotos/Gage.png" width="460" height="460"> <div class="text">Gage Wassweiler</div>
 </div>
 </div> <br>
 <div style="text-align:center"> <span class="dot"></span> <span class="dot"></span> <span class="dot"></span><span class="dot"></span>
@@ -194,8 +194,10 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
   <link rel="stylesheet" href="style.css">
 </head>
  
+ 
  <!--Contact Form-->
 
+ 
  <div class= "contact-form">
   <h3>Contact Us!</h3>
  <form id="contact-form" method="post" action="contact_form_handler.php">
