--- a/bioPage.html
+++ b/bioPage.html
@@ -2,6 +2,7 @@
  <!DOCTYPE html>
 <html>
 <head>
+  <!--CSS Layout-->
 <meta name="viewport" content="width=device-width, initial-scale=1"> <style>
   
        <link rel="stylesheet" href="bioStyle.css">
@@ -9,13 +10,13 @@
   </head>
 
 
-  
+  <!--About Us Statement-->
   
 <h2>About Us</h2>
 <p> This application was developed by a team from the University of Alabama<br> system computer science department to implement a use your friendly interface that<br> is compatible with a highly functional back and SQL database.</p>
   
   
-  
+ <!--Slideshow containing team name and pictures-->  
   
 <div class="slideshow-container">
 <div class="mySlides fade">
@@ -41,7 +42,7 @@
 </div>
   
   
-  
+  <!--Script for Slideshow functionality--> 
   
 <script>
 var slideIndex = 0; showSlides();
@@ -58,22 +59,17 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
 } </script>
   
   
-    
+  <!--Team names and descriptions-->
 <h2>Charity Brown</h2>
 <p> Charity Brown is currently a senior at the University of Alabama majoring in Computer Science with a minor in Criminal Justice. Charity's main areas of expertise entail using her software and cyber technical background in Computer Science to produce innovative, optimal, and immediate solutions with little or no rework involved.
  </p>
   
-  
 <h2>Andy Johnson</h2>
 <p>Insert Description</p>
-  
-  
-  
    
 <h2>Elizabeth Payne</h2>
 <p> Insert Description</p>
   
-    
 <h2>Gage Wassweiler</h2>
 <p> Insert Description</p>
 <head>
@@ -96,9 +92,9 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
      <input type="submit" class="form-control submit" value="SEND MESSAGE">
   </form>
   </div>
-
-
  <!--End of Contact Form-->
+ 
+  <!--Return to homepage-->
    <a href="index.html">
     <div class="div1">
       Back to Home!
@@ -106,6 +102,8 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
 </a>
    
   <body>
+   
+   <!--Footer-->
     <footer>
       <p>*Replace with contact info*Company © W3docs. All rights reserved.</p>
     </footer>
