--- a/bioPage.html
+++ b/bioPage.html
@@ -118,6 +118,7 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
  <br>
  
  <!--Contact Form-->
+  <link rel="stylesheet" href="bioStyle.css">
  <div class= "contact-form">
   <h3>Contact Us!</h3>
  <form id="contact-form" method="post" action="contact_form_handler.php">
