--- a/bioPage.html
+++ b/bioPage.html
@@ -15,7 +15,7 @@
   <!--About Us Statement-->
   
 <h2>About Us</h2>
-<p> This application was developed by a team from the University of Alabama <br> School of Engineering's Computer Science Department in order to implement a user friendly interface that<br> is compatible with a highly functional back and SQL database. Meet the team below!</p>
+<p> This application was developed by a team from the University of Alabama <br> School of Engineering's Computer Science Department in order to implement<br> a user friendly interface that<br> is compatible with a highly functional back and SQL database.<br> Meet the team below!</p>
   
   
  <!--Slideshow containing team name and pictures-->  
