--- a/bioPage.html
+++ b/bioPage.html
@@ -4,22 +4,22 @@
 <head>
   <!--CSS Layout-->
 <meta name="viewport" content="width=device-width, initial-scale=1"> <style>
-  
+
        <link rel="stylesheet" href="bioStyle.css">
-   
+
 
 </style>
   </head>
 
 
   <!--About Us Statement-->
-  
+
 <h2>About Us</h2>
 <p> This application was developed by a team from the University of Alabama <br> School of Engineering's Computer Science Department in order to implement<br> a user friendly interface that is compatible with a highly functional back and SQL database.<br> Meet the team below!</p>
-  
-  
- <!--Slideshow containing team name and pictures-->  
-<link rel="stylesheet" href="bioStyle.css"> 
+
+
+ <!--Slideshow containing team name and pictures-->
+<link rel="stylesheet" href="bioStyle.css">
 <div class="slideshow-container">
 <div class="mySlides fade">
 <div class="numbertext">1 / 4</div>
@@ -37,18 +37,18 @@
 </div>
  <div class="mySlides fade">
 <div class="numbertext">4 / 4</div>
-<img src="bioPhotos/Gage.png" width="460" height="460"> <div class="text">Gage Wassweiler</div>
+<img src="bioPhotos/Gage.jpg" width="460" height="460"> <div class="text">Gage Wassweiler</div>
 </div>
 </div> <br>
 <div style="text-align:center"> <span class="dot"></span> <span class="dot"></span> <span class="dot"></span><span class="dot"></span>
 </div>
-  
-  
-  <!--Script for Slideshow functionality--> 
-  
+
+
+  <!--Script for Slideshow functionality-->
+
 <script>
 var slideIndex = 0; showSlides();
- 
+
  function showSlides() {
   var i;
 var slides = document.getElementsByClassName("mySlides"); var dots = document.getElementsByClassName("dot");
@@ -59,28 +59,28 @@ if (slideIndex > slides.length) {slideIndex = 1} for (i = 0; i < dots.length; i+
 dots[i].className = dots[i].className.replace(" active", ""); }
 slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " active"; setTimeout(showSlides, 2000); // Change image every 2 seconds
 } </script>
-  
-  
+
+
   <!--Team names and descriptions-->
 <h2>Charity Brown</h2>
 <p> Charity Brown is currently a senior at the University of Alabama majoring in Computer Science with a minor in Criminal Justice. Charity's main areas of expertise entail using her software and cyber technical background in Computer Science to produce innovative, optimal, and immediate solutions with little or no rework involved.
  </p>
-  
+
 <h2>Andy Johnson</h2>
 <p>Insert Description</p>
-   
+
 <h2>Elizabeth Payne</h2>
 <p> Insert Description</p>
-  
+
 <h2>Gage Wassweiler</h2>
-<p> Insert Description</p>
+<p> I am a Senior at the University of Alabama with a major in Computer Science and a minor in Creative Media. Throughout the course of my academic career, I have also worked as an electrical engineering intern for Gestamp Auotmotive. As an intern, I have had the opportunity to assist with the electrical layout of a new manufacturing plant while also learning valuable skills such as AutoCad. In both my academic and professional projects, I have developed problem-solving, management and analytical skills. I have also gathered valuable leadership skills as the president and team captain of the Alabama Boxing Club which held over 70 members.</p>
 <head>
   <link rel="stylesheet" href="style.css">
 </head>
  <br>
  <br>
  <br>
- 
+
  <!--Contact Form-->
   <link rel="stylesheet" href="bioStyle.css">
  <div class= "contact-form">
@@ -96,16 +96,16 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
   </form>
   </div>
  <!--End of Contact Form-->
- 
+
   <!--Return to homepage-->
    <a href="index.html">
     <div class="div1">
       Back to Home!
     </div>
 </a>
-   
+
   <body>
-   
+
    <!--Footer-->
     <footer>
       <p>*Replace with contact info*Company © W3docs. All rights reserved.</p>
@@ -113,4 +113,3 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
   </body>
 </body>
 </html>
-
