--- a/bioPage.html
+++ b/bioPage.html
@@ -96,7 +96,38 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
   </form>
   </div>
  <!--End of Contact Form-->
-
+ <head>
+    <title>Title of the document</title>
+    <style>
+      div {
+        margin-bottom: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <h2>Give Feedback to Our Website.</h2>
+    <form action="mailto:ccbrown414@gmail.com" method="get" enctype="text/plain">
+      <div>
+        <label for="name">Name:
+          <input type="text" name="name" id="name" />
+        </label>
+      </div>
+      <div>
+        <label for="email">Email:
+          <input type="text" name="email" id="email" />
+        </label>
+      </div>
+      <div>
+        <label>Comments:</label>
+        <br />
+        <textarea name="comments" rows="12" cols="35">Send your comments to us.</textarea>
+      </div>
+      <div>
+        <input type="submit" name="submit" value="Send" />
+        <input type="reset" name="reset" value="Clear Form" />
+      </div>
+    </form>
+  </body>
   <!--Return to homepage-->
    <a href="index.html">
     <div class="div1">
