--- a/bioPage.html
+++ b/bioPage.html
@@ -85,8 +85,10 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
   <link rel="stylesheet" href="bioStyle.css">
  <div class= "contact-form">
   <h3>Contact Us!</h3>
- <form id="contact-form" method="post" action="contact_form_handler.php">
-  <input name="name" type="text" class="form-control" placeholder="Your Name" required>
+  <h2>Email: __________</h2>
+  
+   <!--<form id="contact-form" method="post" action="contact_form_handler.php">
+<input name="name" type="text" class="form-control" placeholder="Your Name" required>
   <br>
   <input name="email" type="email" class="form-control" placeholder= "Your Email" required>
   <br>
@@ -94,40 +96,10 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
   <br>
      <input type="submit" class="form-control submit" value="SEND MESSAGE">
   </form>
-  </div>
+  </div>-->
  <!--End of Contact Form-->
- <head>
-    <title>Title of the document</title>
-    <style>
-      div {
-        margin-bottom: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <h2>Give Feedback to Our Website.</h2>
-    <form action="mailto:ccbrown414@gmail.com" method="get" enctype="text/plain">
-      <div>
-        <label for="name">Name:
-          <input type="text" name="name" id="name" />
-        </label>
-      </div>
-      <div>
-        <label for="email">Email:
-          <input type="text" name="email" id="email" />
-        </label>
-      </div>
-      <div>
-        <label>Comments:</label>
-        <br />
-        <textarea name="comments" rows="12" cols="35">Send your comments to us.</textarea>
-      </div>
-      <div>
-        <input type="submit" name="submit" value="Send" />
-        <input type="reset" name="reset" value="Clear Form" />
-      </div>
-    </form>
-  </body>
+ 
+    
   <!--Return to homepage-->
    <a href="index.html">
     <div class="div1">
