--- a/bioPage.html
+++ b/bioPage.html
@@ -67,7 +67,7 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
  </p>
 
 <h2>Andy Johnson</h2>
-<p>Insert Description</p>
+<p>I am currently a senior at the University of Alabama, majoring in Computer Science and minoring in Mathematics. I used to be a Civil Engineering major until my junior year when I completed an internship with Turner Construction and realized that my calling was elsewhere and developed a desire for software engineering.</p>
 
 <h2>Elizabeth Payne</h2>
 <p> Insert Description</p>
