--- a/bioPage.html
+++ b/bioPage.html
@@ -29,7 +29,7 @@
  </div>
 <div class="mySlides fade">
 <div class="numbertext">2 / 4</div>
-<img src="bioPhotos/Andy.png" width="460" height="460"> <div class="text">Andy Johnson</div>
+<img src="bioPhotos/Andy.jpg" width="460" height="460"> <div class="text">Andy Johnson</div>
 </div>
 <div class="mySlides fade">
 <div class="numbertext">3 / 4</div>
