--- a/bioPage.html
+++ b/bioPage.html
@@ -70,7 +70,11 @@ slides[slideIndex-1].style.display = "block"; dots[slideIndex-1].className += " 
 <p>Insert Description</p>
 
 <h2>Elizabeth Payne</h2>
-<p> Insert Description</p>
+<p> I am a senior at the University of Alabama with a major in Computer Science
+and a minor in Mathematics. During my time at Alabama, I feel like I have
+developed strong skills in programming as well as being able to work well with
+others in group projects. Because of these skills, I have had the great opportunity
+of interning for Craft Designs Inc. in Huntsville, AL, for the past 3 years.  </p>
 
 <h2>Gage Wassweiler</h2>
 <p> I am a Senior at the University of Alabama with a major in Computer Science and a minor in Creative Media. Throughout the course of my academic career, I have also worked as an electrical engineering intern for Gestamp Auotmotive. As an intern, I have had the opportunity to assist with the electrical layout of a new manufacturing plant while also learning valuable skills such as AutoCad. In both my academic and professional projects, I have developed problem-solving, management and analytical skills. I have also gathered valuable leadership skills as the president and team captain of the Alabama Boxing Club which held over 70 members.</p>
