--- a/Website/index.html
+++ b/Website/index.html
@@ -21,9 +21,9 @@ body {
 
 <nav>
 	<ul>
-		<li><a href="technicalOverview.html">Technical Overview</a></li>
-		<li><a href="deliverablesPage.html">Deliverables</a></li>
-		<li><a href="bioPage.html">About Us</a></li>
+		<li><a href="../technicalOverview.html">Technical Overview</a></li>
+		<li><a href="../deliverablesPage.html">Deliverables</a></li>
+		<li><a href="../bioPage.html">About Us</a></li>
 	</ul>
 </nav>
 
