some website updating

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@ body {
 
 
 <h2>Project Overview:</h2>
-	<p>   This project is intended to assist daily fantasy sports users create an
-	optimized lineup for competitions. Making lineups on apps such as FanDuel and
+	<p>   This project is intended to assist daily fantasy sports users create 	
+	optimized lineups for competitions. Making lineups on apps such as FanDuel and
 	DraftKings is very difficult because the user is left to create a lineup on their
 	own using very limited statistics.</p>
 
 	<p>    With our app, users can automatically generate an optimal lineup based on
-	detailed player statistics, player salary, and the salary cap. The user would
-	also be able to edit that lineup to suit their preferences. </p>
+	detailed player statistics, player salary, and the salary cap. The user is also able
+	to choose specific players they want to run the optimization around. </p>
 
-<h2>Project Goals:</h2>
+<h2>Project Specifications:</h2>
 <blockquote>
 <h3>Optimized Lineup</h3>
 <p>We want to generate an optimized lineup for each user that they can then use on
@@ -49,12 +49,12 @@ against opponent, injury status, strength of the opponent, etc. See our
 
 <h3>User-Friendliness and Ease of Use</h3>
 <p>Our goal is to create an application that is easy to use and also appealing
-in order to keep users happy. </p>
+in order to keep users happy. The app has a very straightforward and concise interface
+and it also allows users to save their lineups under their account! </p>
 
 <h3>Daily Fantasy Sports Offered</h3>
-<p> We have an initial goal of offering optimized lineups for NBA daily fantasy
-sports. After completing this goal to a reasonable degree, we hope to then expand
-to other sports such as NFL and MLB.</p> 
+<p> We offer optimized lineups for NBA, MLB, and NFL! The lineups offered work for head to head
+	contests in both Draft Kings and Fanduel.</p> 
 </blockquote>
 </body>
 </html>
