fixed issue on home page

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ body {
 <h2>Project Specifications:</h2>
 <blockquote>
 <h3>Optimized Lineup</h3>
-<p>We want to generate an optimized lineup for each user that they can then use on
-daily fantasy sports sites. In order to make these lineups, we will use
+<p>The app generates optimized lineups for each user that they can then use on
+daily fantasy sports sites. In order to make these lineups, we use
 statistics including: player average points per game, player average performace
 against opponent, injury status, strength of the opponent, etc. See our
 "Technical Overview" for more information on our statistics </p>
