link for downloading the zip file on deliverables page

--- a/Website/deliverablesPage.html
+++ b/Website/deliverablesPage.html
@@ -3,16 +3,17 @@
 		<link rel="stylesheet" href="style.css">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
+		<style>
 body {
 	font-family: Arial, Helvetica, sans-serif;
 }
-</style>
+		</style>
 	</head>
 	<body>
 		<h2>Deliverables:</h2>
 	</body>
 	<a href="index.html">
+		<div href="FanAssist.zip">Download FanAssist Application Here</div>
 		<div class="div1">
 			Back to Home!
 		</div>
