trying to fix back button

--- a/Website/deliverablesPage.html
+++ b/Website/deliverablesPage.html
@@ -12,7 +12,7 @@ body {
 	<body>
 		<h2>Deliverables:</h2>
 	</body>
-	<a href="index.html">
+	<a href="/index.html">
 		<div class="div1">
 			Back to Home!
 		</div>
