--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -12,11 +12,20 @@ body {
 	<body>
 		<h2>Deliverables:</h2>
 	</body>
-	<a
-		<div href="FanAssist.zip">Download FanAssist Application Here</div>
+	<a href = "deliverables/FanAssist.zip"> 
+		<div class="div1">FanAssist Zip File</div>
+	</a>
+	<a href="deliverables/Sprint1Presentation.zip">
+		<div class="div2">Sprint 1 Presentation</div>
+	</a>
+	<a href="deliverables/Sprint2Presentation.zip">
+		<div class="div2">Sprint 2 Presentation</div>
+	</a>
+	<a href="deliverables/Sprint3Presentation.zip">
+		<div class="div2">Sprint 3 Presentation</div>
 	</a>
 	<a href="index.html">
-		<div class="div1">
+		<div class="div3">
 			Back to Home!
 		</div>
 	</a>
