changed file extensions

--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -15,13 +15,13 @@ body {
 	<a href = "deliverables/FanAssist.zip"> 
 		<div class="div1">FanAssist Zip File</div>
 	</a>
-	<a href="deliverables/Sprint1Presentation.zip">
+	<a href="deliverables/Sprint1Presentation.pptx">
 		<div class="div2">Sprint 1 Presentation</div>
 	</a>
-	<a href="deliverables/Sprint2Presentation.zip">
+	<a href="deliverables/Sprint2Presentation.pptx">
 		<div class="div2">Sprint 2 Presentation</div>
 	</a>
-	<a href="deliverables/Sprint3Presentation.zip">
+	<a href="deliverables/Sprint3Presentation.pptx">
 		<div class="div2">Sprint 3 Presentation</div>
 	</a>
 	<a href="index.html">
