link for APK File

--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -24,6 +24,9 @@ body {
 	<a href="deliverables/Sprint3Presentation.pptx">
 		<div class="div2">Sprint 3 Presentation</div>
 	</a>
+	<a href="FanAssist.apk">
+		<div class="div2">APK File</div>
+	</a>
 	<a href="index.html">
 		<div class="div3">
 			Back to Home!
