Added links to all the other deliverables

--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -24,6 +24,18 @@ body {
 	<a href="deliverables/Sprint3Presentation.pptx">
 		<div class="div2">Sprint 3 Presentation</div>
 	</a>
+	<a href="deliverables/ProjectBacklog.xslx">
+		<div class="div2">Project Backlog</div>
+	</a>
+	<a href="deliverables/DailyMeetingS1.docx">
+		<div class="div2">Daily Meetings -- Sprint 1</div>
+	</a>
+	<a href="deliverables/DailyMeetingsS1.docx">
+		<div class="div2">Daily Meetings -- Sprint 2</div>
+	</a>
+	<a href="deliverables/Sprint1Presentation.pptx">
+		<div class="div2">Daily Meetings -- Sprint 3</div>
+	</a>
 	<a href="FanAssist.apk">
 		<div class="div2">APK File</div>
 	</a>
