--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ body {
 <body>
 
 <h1>Daily Fantasy Sports Optimizer:</h1>
+	
 <p>
 	A project by: Charity Brown, Andy Johnson, Elizabeth Payne, and Gage
 	Wassweiler
@@ -27,6 +28,7 @@ body {
 	</ul>
 </nav>
 
+	<iframe width="480" height="270" src="https://www.powtoon.com/embed/c7ptQBkNd28/" frameborder="0" allowfullscreen></iframe>
 
 <h2>Project Overview:</h2>
 	<p>   This project is intended to assist daily fantasy sports users create 	
