--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+	.center { margin: 0 auto; width: 400px; }
 </style>
 </head>
 <body>
@@ -28,7 +29,7 @@ body {
 	</ul>
 </nav>
 
-	<iframe width="1280" height="720" src="https://www.powtoon.com/embed/c7ptQBkNd28/" frameborder="0" allowfullscreen></iframe>
+	<iframe width="1280" height="720" class='center'src="https://www.powtoon.com/embed/c7ptQBkNd28/" frameborder="0" allowfullscreen></iframe>
 
 <h2>Project Overview:</h2>
 	<p>   This project is intended to assist daily fantasy sports users create 	
