--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-center { 
-margin: 0 auto; width: 400px; 
-}
 </style>
 </head>
 <body>
@@ -32,7 +29,7 @@ margin: 0 auto; width: 400px;
 	</ul>
 </nav>
 
-	<iframe width="1280" height="720" class= 'center' src="https://www.powtoon.com/embed/c7ptQBkNd28/" frameborder="0" allowfullscreen></iframe>
+	<iframe width="1280" height="720" align-items=center src="https://www.powtoon.com/embed/c7ptQBkNd28/" frameborder="0" allowfullscreen></iframe>
 
 <h2>Project Overview:</h2>
 	<p>   This project is intended to assist daily fantasy sports users create 	
