--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
 	</ul>
 </nav>
 
-	<iframe width="1280" height="720" align-items=center src="https://www.powtoon.com/embed/c7ptQBkNd28/" frameborder="0" allowfullscreen></iframe>
+	<iframe width="1280" height="720" src="https://www.powtoon.com/embed/c7ptQBkNd28/" frameborder="0" allowfullscreen></iframe>
 
 <h2>Project Overview:</h2>
 	<p>   This project is intended to assist daily fantasy sports users create 	
