--- a/bioPage.html
+++ b/bioPage.html
@@ -91,7 +91,7 @@ of interning for Craft Designs Inc. in Huntsville, AL, for the past 3 years.  </
   <h3>Contact Us!</h3>
   
   
-  <h3>Email: __________</h3>
+  <h3>Email:fanassistcontact@gmail.com</h3>
   
    <!--<form id="contact-form" method="post" action="contact_form_handler.php">
 <input name="name" type="text" class="form-control" placeholder="Your Name" required>
@@ -117,7 +117,11 @@ of interning for Craft Designs Inc. in Huntsville, AL, for the past 3 years.  </
 
    <!--Footer-->
     <footer>
-      <p>*Replace with contact info*Company © W3docs. All rights reserved.</p>
+      <p> <a href="index.html">
+    <div class="div1">
+      Back to Home!
+    </div>
+</a></p>
     </footer>
   </body>
 </body>
