--- a/bioPage.html
+++ b/bioPage.html
@@ -91,7 +91,7 @@ of interning for Craft Designs Inc. in Huntsville, AL, for the past 3 years.  </
   <h3>Contact Us!</h3>
   <br>
   
-  <h3>Email:fanassistcontact@gmail.com</h3>
+  <h3>Email:fanassistcontact@gmail.com</h3> <br>
   
    <!--<form id="contact-form" method="post" action="contact_form_handler.php">
 <input name="name" type="text" class="form-control" placeholder="Your Name" required>
