--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -18,6 +18,10 @@ body {
 	<a href = "deliverables/FanAssist.zip"> 
 		<div class="div2">FanAssist Zip File</div>
 	</a>
+	<a href = "https://www.powtoon.com/c/c7ptQBkNd28/1/m"> 
+		<div class="div2">FanAssist App Demo</div>
+	</a>
+	
 	<a href="deliverables/Sprint1Presentation.pptx">
 		<div class="div2">Sprint 1 Presentation</div>
 	</a>
