more website changes

--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -15,13 +15,15 @@ body {
 	<a href="FanAssist.apk">
 		<div class="div2">APK File</div>
 	</a>
+	<h2>APK File</h2>
 	<a href = "deliverables/FanAssist.zip"> 
 		<div class="div2">FanAssist Zip File</div>
 	</a>
+	<h2>App Demo</h2>
 	<a href = "https://www.powtoon.com/c/c7ptQBkNd28/1/m"> 
 		<div class="div2">FanAssist App Demo</div>
 	</a>
-	
+	<h2>Presentations</h2>
 	<a href="deliverables/Sprint1Presentation.pptx">
 		<div class="div2">Sprint 1 Presentation</div>
 	</a>
@@ -31,16 +33,18 @@ body {
 	<a href="deliverables/Sprint3Presentation.pptx">
 		<div class="div2">Sprint 3 Presentation</div>
 	</a>
+	<h2>Project Backlog</h2>
 	<a href="deliverables/ProjectBacklog.xslx">
 		<div class="div2">Project Backlog</div>
 	</a>
+	<h2>Daily Meeting Logs</h2>
 	<a href="deliverables/DailyMeetingS1.docx">
 		<div class="div2">Daily Meetings -- Sprint 1</div>
 	</a>
-	<a href="deliverables/DailyMeetingsS1.docx">
+	<a href="deliverables/DailyMeetingS2.docx">
 		<div class="div2">Daily Meetings -- Sprint 2</div>
 	</a>
-	<a href="deliverables/Sprint1Presentation.pptx">
+	<a href="deliverables/DailyMeetingS3.docx">
 		<div class="div1">Daily Meetings -- Sprint 3</div>
 	</a>
 	<a href="index.html">
