--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@ body {
 	<center><iframe width="1280" height="720" src="https://www.powtoon.com/embed/c7ptQBkNd28/" frameborder="0" allowfullscreen></iframe></center>
 
 <h2>Project Overview:</h2>
-	<p>   This project is intended to assist daily fantasy sports users create 	
+	<p>   Fantasy sports can be great, but a large amount of the time, users don't 
+	really know the best way to build a lineup and it can be a major hassle to go sift through tons
+	of data about every player and team. This project is intended to assist daily fantasy sports users create 	
 	optimized lineups for competitions. Making lineups on apps such as FanDuel and
 	DraftKings is very difficult because the user is left to create a lineup on their
 	own using very limited statistics.</p>
