more website changes

--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -34,7 +34,7 @@ body {
 		<div class="div2">Sprint 3 Presentation</div>
 	</a>
 	<h2>Project Backlog</h2>
-	<a href="deliverables/ProjectBacklog.xslx">
+	<a href="deliverables/ProjectBacklog.xlsx">
 		<div class="div2">Project Backlog</div>
 	</a>
 	<h2>Daily Meeting Logs</h2>
