--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -37,6 +37,16 @@ body {
 	<a href="deliverables/ProjectBacklog.xlsx">
 		<div class="div2">Project Backlog</div>
 	</a>
+	<h2>Sprint Backlogs</h2>
+	<a href="deliverables/Sprint1GoalBacklog.docx.pdf">
+		<div class="div2">Sprint 1 Backlog</div>
+	</a>
+	<a href="deliverables/Sprint2GoalBacklog.docx.pdf">
+		<div class="div2">Sprint 2 Backlog</div>
+	</a>
+	<a href="deliverables/Sprint3GoalBacklog.docx.pdf">
+		<div class="div2">Sprint 3 Backlog</div>
+	</a>
 	<h2>Daily Meeting Logs</h2>
 	<a href="deliverables/DailyMeetingS1.docx">
 		<div class="div2">Daily Meetings -- Sprint 1</div>
