--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -47,6 +47,16 @@ body {
 	<a href="deliverables/Sprint3GoalBacklog.docx.pdf">
 		<div class="div2">Sprint 3 Backlog</div>
 	</a>
+	<h2>Sprint Retrospectives</h2>
+	<a href="deliverables/Sprint1Retrospective.docx.pdf">
+		<div class="div2">Sprint 1 Retrospective</div>
+	</a>
+	<a href="deliverables/Sprint2Retrospective.docx.pdf">
+		<div class="div2">Sprint 2 Retrospective</div>
+	</a>
+	<a href="deliverables/Sprint3Retrospective.docx.pdf">
+		<div class="div1">Sprint 3 Retrospective</div>
+	</a>
 	<h2>Daily Meeting Logs</h2>
 	<a href="deliverables/DailyMeetingS1.docx">
 		<div class="div2">Daily Meetings -- Sprint 1</div>
