--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -67,6 +67,10 @@ body {
 	<a href="deliverables/DailyMeetingS3.docx">
 		<div class="div1">Daily Meetings -- Sprint 3</div>
 	</a>
+	<h2>Test Cases</h2>
+	<a href="TestCases.zip">
+		<div class="div2">Test Cases (18) Zip File</div>
+	</a>
 	<a href="index.html">
 		<div class="div2">
 			Back to Home!
