--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -12,10 +12,11 @@ body {
 	<body>
 		<h2>Deliverables:</h2>
 	</body>
+	<h2>APK File</h2>
 	<a href="FanAssist.apk">
 		<div class="div2">APK File</div>
 	</a>
-	<h2>APK File</h2>
+	<h2>Project Zip File</h2>
 	<a href = "deliverables/FanAssist.zip"> 
 		<div class="div2">FanAssist Zip File</div>
 	</a>
