--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -65,9 +65,9 @@ body {
 	<a href="deliverables/DailyMeetingS2.docx">
 		<div class="div2">Daily Meetings -- Sprint 2</div>
 	</a>
-	<a href="deliverables/DailyMeetingS3.docx">
+	<!-- <a href="deliverables/DailyMeetingS3.docx">
 		<div class="div1">Daily Meetings -- Sprint 3</div>
-	</a>
+	</a> -->
 	<h2>Test Cases</h2>
 	<a href="TestCases.zip">
 		<div class="div2">Test Cases (18) Zip File</div>
