--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -55,9 +55,9 @@ body {
 	<a href="deliverables/Sprint2Retrospective.docx.pdf">
 		<div class="div2">Sprint 2 Retrospective</div>
 	</a>
-	<a href="deliverables/Sprint3Retrospective.docx.pdf">
+	<!-- <a href="deliverables/Sprint3Retrospective.docx.pdf">
 		<div class="div1">Sprint 3 Retrospective</div>
-	</a>
+	</a> -->
 	<h2>Daily Meeting Logs</h2>
 	<a href="deliverables/DailyMeetingS1.docx">
 		<div class="div2">Daily Meetings -- Sprint 1</div>
@@ -70,7 +70,7 @@ body {
 	</a> -->
 	<h2>Test Cases</h2>
 	<a href="TestCases.zip">
-		<div class="div2">Test Cases (18) Zip File</div>
+		<div class="div2">Test Cases (18) Zip File<br><br></div>
 	</a>
 	<a href="index.html">
 		<div class="div2">
