more website fix

--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -55,9 +55,9 @@ body {
 	<a href="deliverables/Sprint2Retrospective.docx.pdf">
 		<div class="div2">Sprint 2 Retrospective</div>
 	</a>
-	<!-- <a href="deliverables/Sprint3Retrospective.docx.pdf">
-		<div class="div1">Sprint 3 Retrospective</div>
-	</a> -->
+	<a href="deliverables/Sprint3Retrospective.docx.pdf">
+		<div class="div2">Sprint 3 Retrospective</div>
+	</a>
 	<h2>Daily Meeting Logs</h2>
 	<a href="deliverables/DailyMeetingS1.docx">
 		<div class="div2">Daily Meetings -- Sprint 1</div>
@@ -65,9 +65,9 @@ body {
 	<a href="deliverables/DailyMeetingS2.docx">
 		<div class="div2">Daily Meetings -- Sprint 2</div>
 	</a>
-	<!-- <a href="deliverables/DailyMeetingS3.docx">
-		<div class="div1">Daily Meetings -- Sprint 3</div>
-	</a> -->
+	<a href="deliverables/DailyMeetingS3.docx">
+		<div class="div2">Daily Meetings -- Sprint 3</div>
+	</a>
 	<h2>Test Cases</h2>
 	<a href="TestCases.zip">
 		<div class="div2">Test Cases (18) Zip File<br><br></div>
