hopefully last website update

--- a/deliverablesPage.html
+++ b/deliverablesPage.html
@@ -12,6 +12,10 @@ body {
 	<body>
 		<h2>Deliverables:</h2>
 	</body>
+	<h2>GitHub Repo Link</h2>
+	<a href="https://github.com/DFS-Optimizer/DailyFantasySports">
+		<div class="div2">FanAssist Repo!</div>
+	</a>
 	<h2>APK File</h2>
 	<a href="FanAssist.apk">
 		<div class="div2">APK File</div>
